--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -26,6 +26,11 @@ html, body {
 	.browser-specific {
 		color: #888;
 	}
+
+	.btn-twitter {
+		color: #FFF;
+		background-color: #55ACEE;
+	}
 }
 
 .logo-row {
