--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html, body {
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin: 0 auto -60px;
+  margin: 0 auto;
   text-align: center; }
 
 #header {
@@ -38,7 +38,6 @@ html, body {
   margin: 0;
   padding: 15px 0px 0px 0px;
   position: relative;
-  margin-top: -60px;
   clear: both; }
   #footer .container {
     text-align: center; }
@@ -49,3 +48,8 @@ html, body {
     margin-right: -20px;
     padding-left: 20px;
     padding-right: 20px; } }
+@media (max-width: 767px) {
+  .col-md-3 {
+    overflow: hidden; } }
+
+/*# sourceMappingURL=styles.css.map */
